# stock-checker

./: .gitignore  PLAN.md  render.yaml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/routers/: market.py  news.py  stocks.py
backend/services/: finnhub_client.py  jquants_client.py  screener.py  yfinance_service.py
backend/tests/: conftest.py  test_api.py  test_screener.py
frontend/: app.json  package-lock.json  package.json
frontend/app/: _layout.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  news.tsx  search.tsx  watchlist.tsx
frontend/app/stock/: [symbol].tsx
frontend/components/: MarketOverview.tsx  NewsItem.tsx  ScoreBar.tsx  StockCard.tsx  StockChart.tsx
frontend/hooks/: useNews.ts  useStock.ts
frontend/services/: api.ts
frontend/store/: marketStore.ts  watchlistStore.ts
